test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-10-04 12:16:11.419000

